# gedcom-dna-finder

./: .gitignore  CHANGELOG.md  CLAUDE.md  HELP.md  README.md  build.ps1  build.sh  build_and_release.sh  gedcom-dna-finder-cli.py  gedcom-dna-finder-cli.spec  gedcom-dna-finder-gui.py  gedcom-dna-finder-gui.spec  gedcom-dna-finder.py  generate_icon.py  hatch_build.py  pyproject.toml  requirements-windows.txt  requirements.txt  start.sh
dev/: build-and-release.sh  build-linux.sh  build-mac-appstore.sh  build-mac.sh  build-pypi.ps1  build-pypi.sh  build.ps1  build.sh  build_and_release.sh  build_pypi.ps1  build_pypi.sh  entitlements-appstore.plist  entitlements.plist  find_ffi_dll.py  gedcom-dna-finder-cli.spec  gedcom-dna-finder-gui.spec  gedcom-words.txt  gedcom_dna_finder_cli.spec  gedcom_dna_finder_gui.spec  generate_icns.sh  hatch_build.py  pyproject.toml  requirements.txt
docs/: CHANGELOG.md  HELP.md  KEYBOARD_SHORTCUTS.md  LICENSE.md  PRIVACY_POLICY.md  README.md
gedcom_dna_finder/: __init__.py  cli.py  gui.py
icons/: family_tree.icns
src/: gedcom-dna-finder-cli.py  gedcom-dna-finder-gui.py  gedcom_config.py  gedcom_core.py  gedcom_data_model.py  gedcom_dna_finder_cli.py  gedcom_dna_finder_gui.py  gedcom_gui_appearance.py  gedcom_gui_dialogs.py  gedcom_markdown.py  gedcom_relationship.py  gedcom_strings.py  gedcom_theme.py
