[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gedcom-dna-finder"
version = "0.2.0"
description = "Find the nearest DNA-flagged relatives in a GEDCOM family tree"
readme = {file = "../docs/README.md", content-type = "text/markdown"}
license = {text = "BSD-2-Clause"}
authors = [{name = "Adam Kessel", email = "ajkessel@gmail.com"}]
keywords = ["gedcom", "genealogy", "dna", "ancestry", "family-tree"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Other/Nonlisted Topic",
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
# tkinter ships with the official Python installers on Windows and macOS.
# On Linux it is typically in a separate OS package (e.g. python3-tk).
gui = []

[project.urls]
Homepage = "https://github.com/ajkessel/gedcom-dna-finder"
Repository = "https://github.com/ajkessel/gedcom-dna-finder"
"Bug Tracker" = "https://github.com/ajkessel/gedcom-dna-finder/issues"
Changelog = "https://github.com/ajkessel/gedcom-dna-finder/blob/main/docs/CHANGELOG.md"

# CLI entry point (console)
[project.scripts]
gedcom-dna-finder = "gedcom_dna_finder.cli:main"

# GUI entry point (no console window on Windows)
[project.gui-scripts]
gedcom-dna-finder-gui = "gedcom_dna_finder.gui:main"

# hatch_build.py copies src/ scripts and assets into gedcom_dna_finder/ before
# the wheel is assembled, so the static force-include below picks them all up.
# Hatchling explicitly supports ".." in force-include paths.
[tool.hatch.build.targets.wheel.force-include]
"../gedcom_dna_finder" = "gedcom_dna_finder"

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"
